--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -27,11 +27,20 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.3.0
   cupertino_icons: ^1.0.2
+  firebase_auth: ^5.2.0
+  firebase_core: ^3.4.0
+  firebase_storage: ^12.2.0
   flutter:
     sdk: flutter
-  flutter_svg: ^1.1.0
-  provider: ^6.0.3
+  flutter_facebook_auth: ^7.1.0
+  flutter_screenutil: ^5.9.3
+  flutter_svg: ^2.0.10+1
+  get: ^4.6.6
+  google_sign_in: ^6.2.1
+  image_picker: ^1.1.2
+  sign_in_with_apple: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -40,7 +49,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
