What i did? && Next on:
Did:
-Firebase integrated and First system included
-Page Updates completed
-Some pages retrieved and updated from TuncStore and TuncStore admin
-Notification System has been included
-Controller system integrated - Not completed
-Codes Upgraded
Next on:
-UI bug fixes and application branch connections
-Notification System Upgrade
-DIY System Upgrade

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,18 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    ext.kotlin_version = '1.8.0'  // Kotlin sürümünü burada tanımlayın
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.3.0'  // Android Gradle Plugin sürümü
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.15'  // Firebase için Google Services plugin
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -8,11 +23,21 @@ allprojects {
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(":app")
 }
 
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
+}
+
+// Flutter projeleri için ek yapılandırmalar
+subprojects {
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'com.android.support'
+                    && !details.requested.name.contains('multidex') ) {
+                details.useVersion "27.1.1"
+            }
+        }
+    }
 }
