--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,20 +27,29 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^5.0.0
   cloud_firestore: ^5.3.0
   cupertino_icons: ^1.0.2
+  dotted_border: ^2.1.0
+  fancy_shimmer_image: ^2.0.3
   firebase_auth: ^5.2.0
   firebase_core: ^3.4.0
+  firebase_messaging: ^15.1.3
   firebase_storage: ^12.2.0
   flutter:
     sdk: flutter
+  flutter_colorpicker: ^1.1.0
   flutter_facebook_auth: ^7.1.0
+  flutter_local_notifications: ^17.2.3
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.10+1
+  fluttertoast: ^8.2.8
   get: ^4.6.6
   google_sign_in: ^6.2.1
   image_picker: ^1.1.2
+  shimmer: ^3.0.0
   sign_in_with_apple: ^6.1.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
